--- a/methodologie.html
+++ b/methodologie.html
@@ -1,29 +1,63 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-<!-- End Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
+  <title>Méthodologie pédagogique : le cycle de Kolb appliqué au jeu | Ludus Mentis</title>
   <meta name="description" content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences.">
   <meta name="keywords" content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#fb923c',
+            'primary-focus': '#ea580c',
+            secondary: '#fbbf24',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
-<body>
+<body class="min-h-screen bg-base-100">
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <div id="header"></div>
+  
   <main class="container">
-
     <section class="section card">
       <h1>Notre méthodologie : du jeu à la compétence</h1>
       <p>
@@ -59,6 +93,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li>
             <strong>L'expérimentation active (la mise en pratique) :</strong><br>
             L'équipe relance une partie, mais avec une nouvelle stratégie, basée sur la leçon apprise : "Ok, pour cette manche, toi tu gères les cuissons, moi les découpes et on s'annonce les commandes à voix haute". Ils testent leur nouvelle compétence en conditions réelles et constatent leur progression.
+      </li>
       </ol>
       <p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
     </section>
@@ -68,12 +103,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <ul>
         <li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
         <li><strong>Pédagogie structurée :</strong> Débriefings guidés en groupe pour transformer chaque partie en apprentissage (cycle de Kolb).</li>
-        <li><strong>Charte d’éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l’empathie dans chaque interaction.</li>
+        <li><strong>Charte d'éthique :</strong> Co-construite avec les jeunes, pour ancrer le respect et l'empathie dans chaque interaction.</li>
         <li><strong>Implication parentale :</strong> Rencontres, ateliers, et bilans de progression en fin de module avec les familles.</li>
       </ul>
     </section>
-
   </main>
+  
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
