--- a/educateurs.html
+++ b/educateurs.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-<!-- End Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
+  <title>Espace éducateurs : le jeu vidéo comme outil pédagogique | Ludus Mentis</title>
   <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
   <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#fb923c',
+            'primary-focus': '#ea580c',
+            secondary: '#fbbf24',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
+<body class="min-h-screen bg-base-100">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   
-  <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
 
   <main class="container">
-
     <section class="section hero">
       <h1>Un allié pour l'école et les éducateurs</h1>
       <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
@@ -83,7 +115,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section class="section card" style="text-align:center;">
         <h2>Notre kit pédagogique</h2>
         <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <a href="assets/kit-pedagogique.pdf" class="btn" download> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
+        <a href="assets/kit-pedagogique.pdf" class="btn" download>Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
     </section>
     
     <section class="section card">
@@ -91,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
         <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
             <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
-            <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 80px; object-fit: contain;">
+            <img src="assets/images/logo_besf.png" alt="Logo de la fédération belge d'esport" style="max-height: 80px; object-fit: contain;">
         </div>
     </section>
 
@@ -105,7 +137,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
       <p style="text-align:center; margin-top:2em;"><a href="contact.html" class="btn">Contactez-nous pour échanger</a></p>
     </section>
-
   </main>
 
   <div id="footer"></div>
