--- a/faq.html
+++ b/faq.html
@@ -1,59 +1,93 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="light">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
-<!-- End Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WMCMP74V');</script>
+  <!-- End Google Tag Manager -->
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
+  <title>FAQ - Questions fréquentes sur nos ateliers | Ludus Mentis</title>
   <meta name="description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
   <meta name="keywords" content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance">
+  
+  <!-- DaisyUI + Tailwind CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  
+  <!-- Configuration Tailwind -->
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          colors: {
+            primary: '#fb923c',
+            'primary-focus': '#ea580c',
+            secondary: '#fbbf24',
+            accent: '#ef4444',
+          },
+          fontFamily: {
+            'sans': ['Inter', 'system-ui', '-apple-system', 'sans-serif'],
+            'display': ['Space Grotesk', 'system-ui', 'sans-serif'],
+          }
+        }
+      }
+    }
+  </script>
+  
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
+  
+  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
-<body>
+<body class="min-h-screen bg-base-100">
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WMCMP74V"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
   <div id="header"></div>
+  
   <main class="container">
-
     <section class="section card">
       <h1>Foire aux questions</h1>
       <p>Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
-         Si votre question ne figure pas ici, <a href="contact.html">contactez-nous</a> : 
-         nous nous ferons un plaisir d’y répondre.</p>
+         Si votre question ne figure pas ici, <a href="contact.html">contactez-nous</a> : 
+         nous nous ferons un plaisir d'y répondre.</p>
     </section>
 
     <section class="section card">
-      <h2>À qui s’adresse Ludus Mentis&nbsp;?</h2>
+      <h2>À qui s'adresse Ludus Mentis&nbsp;?</h2>
       <p>
-        Aux jeunes de <strong>10 à 15 ans</strong>, qu’ils soient passionnés de jeux vidéo, joueurs occasionnels, 
+        Aux jeunes de <strong>10 à 15 ans</strong>, qu'ils soient passionnés de jeux vidéo, joueurs occasionnels, 
         ou simplement curieux.  
-        Notre programme s’adapte à chaque profil : les plus expérimentés y trouvent 
+        Notre programme s'adapte à chaque profil : les plus expérimentés y trouvent 
         des défis et du développement personnel, tandis que les débutants découvrent 
         les bases de la coopération, de la communication et du respect en ligne.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Est-ce qu’il y a de la compétition ?</h2>
+      <h2>Est-ce qu'il y a de la compétition ?</h2>
       <p>
-        Notre priorité est <strong>l’esprit d’équipe</strong> et la progression individuelle.  
+        Notre priorité est <strong>l'esprit d'équipe</strong> et la progression individuelle.  
         Certains ateliers incluent des défis ludiques ou des tournois internes, mais toujours dans un cadre 
-        <em>positif</em> : l’objectif est d’apprendre à gérer la pression, à collaborer et à respecter l’adversaire.  
+        <em>positif</em> : l'objectif est d'apprendre à gérer la pression, à collaborer et à respecter l'adversaire.  
         Nous voulons former des joueurs capables de gagner… et de perdre, avec le même fair-play.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Comment s’inscrire ?</h2>
+      <h2>Comment s'inscrire ?</h2>
       <p>
         Remplissez simplement le <a href="contact.html">formulaire de contact</a> ou envoyez un mail à 
         <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>.  
@@ -63,13 +97,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </section>
 
     <section class="section card">
-      <h2>Et pour les parents inquiets ?</h2>
+      <h2>Et pour les parents inquiets ?</h2>
       <p>
-       Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires
+       Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires.
       </p>
     </section>
-
   </main>
+  
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
 </body>
