refactor: modernize design with daisyUI and dark mode

--- a/academie.html
+++ b/academie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -31,6 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "serviceType": "Formation et coaching esport éducatif"
   }
   </script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -40,14 +41,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section hero">
+    <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>L'académie : bien plus que du jeu vidéo</h1>
       <p>Notre académie est un espace d'exploration où le jeu devient un prétexte pour grandir. Conçu pour les <strong>jeunes de 10 à 15 ans</strong>, notre programme unique tisse ensemble jeu coopératif, ateliers de développement personnel et activités créatives pour une expérience riche et équilibrée.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Le déroulé d'une séance en 4 temps (2 heures)</h2>
       <p>Pour être efficace, notre pédagogie s'appuie sur une structure claire qui complète le cycle d'apprentissage par l'expérience. Voici le déroulé précis de nos sessions de 120 minutes :</p>
       
@@ -75,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Nos piliers pédagogiques : ce qui fait notre différence</h2>
       <ul>
         <li>
@@ -93,12 +94,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
     
-    <section class="section card" style="text-align:center;">
+    <section class="card bg-base-100 shadow-xl p-6 text-center">
         <h2>Prêt à rejoindre l'aventure ?</h2>
         <p>Les places sont limitées pour garantir un accompagnement de qualité.
             <br>
             Contactez-nous pour toute question ou pour procéder à une demande d'inscription.</p>
-        <a href="contact.html" class="btn">Je veux plus d'infos</a>
+        <a href="contact.html" class="btn btn-primary">Je veux plus d'infos</a>
     </section>
 
   </main>
