--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -31,6 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   }
   </script>
   
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
   
@@ -229,13 +230,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="header"></div>
   
-  <main class="container">
-    <section class="section hero">
+  <main class="container mx-auto p-4 space-y-8">
+    <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Préparez dès maintenant la rentrée 2026 !</h1>
       <p>Notre académie ouvrira ses portes en <strong>janvier 2026</strong>. Posez vos questions, demandez une présentation ou réservez votre place dès maintenant.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Comment souhaitez-vous être contacté ?</h2>
       <div class="contact-options">
         <div class="contact-card" data-type="info">
@@ -321,7 +322,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </form>
       
-      <p style="margin-top: 2em; color: #876b4c; text-align: center;">
+      <p class="mt-8 text-center text-[#876b4c]">
         Vous préférez nous écrire directement ? 
         <a href="mailto:info@ludusmentis.be">info@ludusmentis.be</a>
       </p>
