--- a/educateurs.html
+++ b/educateurs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Espace Éducateurs : Le Jeu Vidéo comme Outil Pédagogique | Ludus Mentis</title>
   <meta name="description" content="Pour les enseignants et professionnels de l'éducation. Découvrez comment nos ateliers développent des compétences clés (collaboration, esprit critique) applicables en milieu scolaire.">
   <meta name="keywords" content="espace éducateurs, outil pédagogique, esport scolaire, projet pédagogique, compétences 21e siècle, savoir-être">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -24,14 +25,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
 
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section hero">
+    <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Un allié pour l'école et les éducateurs</h1>
       <p>Vous êtes enseignant, directeur d'établissement, ou acteur du monde éducatif ? Cet espace vous est dédié. Découvrez comment la méthode Ludus Mentis crée des ponts entre la passion du jeu vidéo et les compétences essentielles à la réussite scolaire et sociale de vos élèves.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Notre projet pédagogique : du jeu à la compétence</h2>
       <p>
         Notre approche ne se contente pas d'occuper les jeunes. Elle s'appuie sur une vision pédagogique structurée pour transformer le temps d'écran en une expérience d'apprentissage active et constructive.
@@ -49,11 +50,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
     
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Des ponts concrets avec le monde scolaire</h2>
       <p>Les compétences que nous développons dans l'arène virtuelle ont une application directe et mesurable dans la salle de classe et la cour de récréation. Voici comment :</p>
-      <div style="display: flex; flex-wrap: wrap; gap: 1em;">
-        <div style="flex: 1; min-width: 280px;">
+      <div class="flex flex-wrap gap-4">
+        <div class="flex-1 min-w-[280px]">
           <h4>Communication et collaboration</h4>
           <ul>
             <li>Exprimer ses idées clairement lors d'un <strong>exposé oral</strong>.</li>
@@ -61,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>Donner et recevoir un feedback constructif, sans agressivité.</li>
           </ul>
         </div>
-        <div style="flex: 1; min-width: 280px;">
+        <div class="flex-1 min-w-[280px]">
           <h4>Gestion du stress et persévérance</h4>
           <ul>
             <li>Aborder un <strong>contrôle ou un examen</strong> avec plus de sérénité.</li>
@@ -69,7 +70,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <li>Apprendre de ses erreurs pour mieux réussir ensuite.</li>
           </ul>
         </div>
-        <div style="flex: 1; min-width: 280px;">
+        <div class="flex-1 min-w-[280px]">
           <h4>Résolution de problèmes et esprit critique</h4>
           <ul>
             <li>Analyser une situation complexe (un problème de maths, une expérience scientifique) pour trouver une solution.</li>
@@ -80,22 +81,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </section>
 
-    <section class="section card" style="text-align:center;">
+    <section class="card bg-base-100 shadow-xl p-6 text-center">
         <h2>Notre kit pédagogique</h2>
         <p>Pour vous permettre de présenter notre projet facilement à vos collègues, à votre direction ou aux parents d'élèves, nous avons synthétisé notre approche dans un document PDF clair et concis.</p>
-        <a href="assets/kit-pedagogique.pdf" class="btn" download> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
+        <a href="assets/kit-pedagogique.pdf" class="btn btn-primary" download> Télécharger présentation Ludus Mentis - kit éducateur (PDF)</a>
     </section>
     
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
         <h2>Nos partenaires institutionnels</h2>
         <p>La crédibilité de notre démarche est renforcée par le soutien d'acteurs locaux et nationaux qui partagent notre vision d'un esport éducatif et citoyen.</p>
-        <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
-            <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 80px; object-fit: contain;">
-            <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 80px; object-fit: contain;">
+        <div class="flex items-center justify-center gap-8 flex-wrap mt-6">
+            <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" class="h-20 object-contain">
+            <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" class="h-20 object-contain">
         </div>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Construisons un partenariat</h2>
       <p>Nous sommes convaincus que la collaboration entre les structures éducatives et des initiatives comme la nôtre est essentielle. Nous sommes à votre disposition pour :</p>
       <ul>
@@ -103,7 +104,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li>Organiser un atelier de démonstration pour un groupe d'élèves.</li>
         <li>Discuter de toute autre forme de collaboration.</li>
       </ul>
-      <p style="text-align:center; margin-top:2em;"><a href="contact.html" class="btn">Contactez-nous pour échanger</a></p>
+      <p class="mt-8 text-center"><a href="contact.html" class="btn btn-primary">Contactez-nous pour échanger</a></p>
     </section>
 
   </main>
