--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>FAQ - Questions Fréquentes sur nos Ateliers | Ludus Mentis</title>
   <meta name="description" content="Nos réponses à vos questions : à qui s'adressent nos ateliers, la place de la compétition, comment s'inscrire... Tout ce que les parents doivent savoir.">
   <meta name="keywords" content="FAQ, questions fréquentes, parents, compétition esport, inscription, bienveillance">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -22,16 +23,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h1>Foire aux questions</h1>
       <p>Vous trouverez ici les réponses aux questions les plus fréquentes sur notre académie. 
          Si votre question ne figure pas ici, <a href="contact.html">contactez-nous</a> : 
          nous nous ferons un plaisir d’y répondre.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>À qui s’adresse Ludus Mentis&nbsp;?</h2>
       <p>
         Aux jeunes de <strong>10 à 15 ans</strong>, qu’ils soient passionnés de jeux vidéo, joueurs occasionnels, 
@@ -42,7 +43,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Est-ce qu’il y a de la compétition ?</h2>
       <p>
         Notre priorité est <strong>l’esprit d’équipe</strong> et la progression individuelle.  
@@ -52,7 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Comment s’inscrire ?</h2>
       <p>
         Remplissez simplement le <a href="contact.html">formulaire de contact</a> ou envoyez un mail à 
@@ -62,7 +63,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Et pour les parents inquiets ?</h2>
       <p>
        Notre priorité absolue est le développement de l'esprit d'équipe dans un cadre positif. Nous ne nous focalisons pas sur la compétition. Cependant, nous envisageons à terme de proposer une filière plus compétitive, accessible uniquement aux jeunes ayant démontré une maturité, un fair-play et une gestion émotionnelle exemplaires
