--- a/mentions.html
+++ b/mentions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -12,6 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mentions Légales | Ludus Mentis</title>
   <meta name="description" content="Consultez les mentions légales de l'association Ludus Mentis ASBL.">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -21,9 +22,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h1>Mentions légales</h1>
       <p>Ludus Mentis – Association à but non lucratif (asbl)<br>
         Siège social : Walhain, Belgique<br>
@@ -31,12 +32,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         Responsable de publication : Antoine Billard<br></p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Propriété intellectuelle</h2>
       <p>Le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. Toute reproduction est interdite sans accord écrit.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Cookies et données personnelles</h2>
       <p>Aucune donnée personnelle n’est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.</p>
     </section>
