--- a/methodologie.html
+++ b/methodologie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Méthodologie Pédagogique : Le Cycle de Kolb appliqué au Jeu | Ludus Mentis</title>
   <meta name="description" content="Notre méthodologie s'appuie sur le cycle de Kolb pour transformer chaque partie en apprentissage durable. Découvrez notre cadre structuré pour développer les compétences.">
   <meta name="keywords" content="méthodologie, pédagogie, cycle de kolb, apprentissage par l'expérience, encadrement, bienveillance">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -22,9 +23,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h1>Notre méthodologie : du jeu à la compétence</h1>
       <p>
         Chez Ludus Mentis, nous ne nous contentons pas de faire jouer les jeunes. Nous transformons chaque partie en une opportunité d'apprentissage grâce à un cadre structuré et bienveillant, inspiré des meilleures pratiques pédagogiques.
@@ -38,7 +39,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Le cycle de Kolb : comment le jeu devient apprentissage</h2>
       <p>
         Notre secret réside dans l'application du <strong>cycle de Kolb</strong>, une méthode d'apprentissage en 4 étapes qui transforme une expérience concrète en compétence durable. Voici comment cela fonctionne lors d'une session de jeu :
@@ -63,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>Ce cycle, répété à chaque séance, est la clé pour ancrer durablement les compétences de communication, de collaboration et de gestion des émotions.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Nos engagements concrets</h2>
       <ul>
         <li><strong>Sessions actives :</strong> Alternance de jeux coopératifs, d'exergaming (<em>Ring Fit</em>, <em>Just Dance</em>…) et d'ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
