--- a/a-propos.html
+++ b/a-propos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -30,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     "areaServed": "Belgique"
   }
   </script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -39,28 +40,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h1>Notre histoire : du scoutisme à l'esport</h1>
       <p><strong>Je m'appelle Antoine Billard, et Ludus Mentis est le projet qui rassemble toutes mes passions.</strong> Enfant, mon parcours a été un grand mélange : les valeurs de partage et de nature des scouts, la rigueur et la créativité de l'académie de musique, et l'esprit d'équipe du football. Et au milieu de tout ça, une constante : le jeu vidéo.</p>
       <p>Pour moi, le jeu a toujours été un espace de défi, de logique et d'amitié, un fil rouge qui m'a suivi tout au long de mon parcours.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Un parcours, une conviction</h2>
       <p>Mes études d'ingénieur de gestion, puis ma carrière de chef de projet en informatique, m'ont appris l'importance de la structure, de la collaboration et de la résolution de problèmes. Des compétences que, paradoxalement, je développais aussi lors de mes parties en ligne.</p>
       <p>En parallèle de mon travail actuel, je suis aussi manager (bénévole) de l'équipe nationale belge de Dota 2. Je vois de près ce qui fait la différence au plus haut niveau : non pas la technique seule, mais la communication, la gestion du stress et la cohésion du groupe. C'est exactement ce qui manque dans l'approche grand public du jeu vidéo.</p>
     </section>
 
-   <section class="section card">
+   <section class="card bg-base-100 shadow-xl p-6">
       <h2>Réconcilier les mondes</h2>
       <p>Je suis convaincu que les jeux vidéo, si souvent diabolisés, sont en réalité un formidable outil de développement personnel. Loin des clichés, la recherche scientifique, notamment dans des domaines comme la psychologie du sport appliquée à l'esport, confirme aujourd'hui cette vision. Bien encadrée, la pratique du jeu vidéo permet de cultiver des compétences essentielles comme la résilience, la communication et la résolution de problèmes, des atouts pour s'épanouir à l'écran comme dans la vie.</p>
       <p>Ludus Mentis est né de cette certitude : créer le cadre qui n'existait pas pour moi. Un lieu qui s'inspire de la rigueur d'une académie de musique, de la bienveillance d'un mouvement de jeunesse et de la passion de l'esport. Un espace pour prouver que l'on peut passer des heures à jouer, et en ressortir plus grand.</p>
       <p>Aujourd'hui, ce projet est soutenu par des partenaires clés comme la <strong>commune de Walhain</strong> et la <strong>fédération belge d’esport</strong>, qui croient en notre approche innovante.</p>
     </section>
     
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Envie d’en savoir plus ou de rejoindre l’aventure ?</h2>
       <p>Contactez-moi sans hésiter. Ensemble, nous pouvons faire du jeu vidéo une véritable école de vie.</p>
     </section>
