--- a/concept.html
+++ b/concept.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Notre Concept : Du Jeu Vidéo aux Compétences de Vie | Ludus Mentis</title>
   <meta name="description" content="Découvrez notre concept unique : utiliser des jeux vidéo populaires comme Overcooked ou Rocket League pour développer la communication, la collaboration et la gestion des émotions chez les jeunes.">
   <meta name="keywords" content="concept pédagogique, jeu vidéo éducatif, soft skills, compétences humaines, esport, apprentissage par le jeu">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -23,14 +24,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
 
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section hero">
+    <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Transformer le plaisir de jouer en compétences pour la vie</h1>
       <p>Chez Ludus Mentis, nous partons d'une conviction simple : la passion des jeunes pour le jeu vidéo est une énergie formidable. plutôt que de la freiner, nous la canalisons. nous avons créé un espace où le jeu devient un puissant levier d'apprentissage, encadré par des professionnels bienveillants.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Des pixels aux compétences humaines</h2>
       <p>Au-delà des scores et des classements, chaque partie est une occasion de développer des savoir-être essentiels. voici ce que votre enfant apprend concrètement avec nous :</p>
       <ul>
@@ -41,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Nos outils pédagogiques : des jeux triés sur le volet</h2>
       <p>Tous les jeux ne se valent pas. nous sélectionnons rigoureusement des titres reconnus pour leur potentiel coopératif et éducatif. ce ne sont pas des "jeux éducatifs" classiques, mais de vrais jeux populaires, utilisés comme supports d'apprentissage :</p>
       <ul>
@@ -55,22 +56,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
         <h2>Comment le jeu devient-il apprentissage ?</h2>
         <p>C'est là que réside notre secret : <strong>l'accompagnement humain</strong>. le jeu n'est que la première étape.</p>
         <p>Chaque session de jeu est suivie d'un <strong>débriefing en groupe</strong>, mené par nos animateurs formés. c'est un moment d'échange où l'on met des mots sur ce qui a été vécu : "comment aurions-nous pu mieux nous organiser ?", "qu'as-tu ressenti à ce moment précis ?". c'est en reliant l'action (le jeu) à la réflexion (le débrief) que les compétences s'ancrent durablement.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Notre vision : bâtir des champions de la vie, puis de l'esport</h2>
       <p>Notre première mission est de construire des bases solides : bien-être, confiance en soi et intelligence collective. c'est la vocation de notre académie.</p>
       <p>Dans un second temps, Ludus Mentis ambitionne d'ouvrir une filière esport plus compétitive. mais l'accès à cette filière sera sélectif, non pas sur le niveau de jeu, mais sur les qualités humaines : seuls les jeunes ayant démontré un fair-play exemplaire, une grande maturité et une bonne gestion de leurs émotions pourront y accéder. pour nous, la santé et l'équilibre primeront toujours sur la performance.</p>
     </section>
     
-    <section class="section card" style="text-align:center;">
+    <section class="card bg-base-100 shadow-xl p-6 text-center">
         <h2>Curieux de voir notre programme en action ?</h2>
         <p>Découvrez en détail comment se déroule un atelier au sein de notre académie.</p>
-        <a href="academie.html" class="btn">Explorer l'Académie</a>
+        <a href="academie.html" class="btn btn-primary">Explorer l'Académie</a>
     </section>
 
   </main>
