--- a/enjeux.html
+++ b/enjeux.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -13,7 +13,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <title>Enjeux des Jeux Vidéo : Écrans, Isolement et Solutions | Ludus Mentis</title>
     <meta name="description" content="Analyse des enjeux liés aux jeux vidéo chez les jeunes : temps d'écran, gestion des émotions, risques. Découvrez comment notre approche encadrée apporte des solutions concrètes.">
     <meta name="keywords" content="enjeux jeux vidéo, temps d'écran adolescent, gaming disorder, cyberharcèlement, solution parents, équilibre numérique">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
 <body>
@@ -23,14 +24,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div id="header"></div>
 
-    <main class="container">
+    <main class="container mx-auto p-4 space-y-8">
 
-        <section class="section hero">
+        <section class="hero bg-base-200 text-center rounded-xl p-8">
             <h1>Le jeu vidéo : une réalité, des enjeux, nos solutions</h1>
             <p>Le jeu vidéo est aujourd’hui un élément central du quotidien des jeunes. Il constitue une source de plaisir, de créativité et de socialisation, mais il suscite aussi des interrogations légitimes de la part des parents et des éducateurs. Chez Ludus Mentis, nous considérons le jeu non pas comme un problème, mais comme un terrain d’apprentissage et de développement, à condition qu’il soit encadré et réfléchi. Voici notre analyse des grands enjeux, appuyée par des données scientifiques, et les solutions que nous mettons en œuvre.</p>
         </section>
 
-        <section class="section card">
+        <section class="card bg-base-100 shadow-xl p-6">
             <h2>Quelques chiffres pour cadrer le débat</h2>
             <p>Avant d'explorer les enjeux en détail, voici quelques données clés en Europe et en Belgique :</p>
             <ul>
@@ -41,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </ul>
         </section>
 
-        <section class="section card">
+        <section class="card bg-base-100 shadow-xl p-6">
             <h2>Enjeu n°1 : trouver l’équilibre entre vie numérique et vie réelle</h2>
             <p><strong>Le contexte :</strong> l’hyperconnexion est devenue la norme chez les jeunes. Des sessions de plus de 4 heures consécutives concernent un joueur adolescent sur cinq (<a href="#source2">OMS, 2024</a>). Cet usage intensif peut empiéter sur d’autres sphères essentielles : sommeil, activités physiques, vie familiale et scolaires.</p>
             <p><strong>Les risques concrets :</strong> une pratique excessive favorise la sédentarité (<a href="#source7">PLOS ONE, 2022</a>), la fatigue visuelle (<a href="#source6">PMC, 2023</a>) et les troubles du sommeil (<a href="#source8">PubMed, 2024</a>). Le temps consacré aux devoirs ou aux échanges familiaux se réduit, et la concentration peut être affectée.</p>
@@ -54,7 +55,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
         </section>
 
-        <section class="section card">
+        <section class="card bg-base-100 shadow-xl p-6">
             <h2>Enjeu n°2 : de l’isolement virtuel à la coopération réelle</h2>
             <p><strong>Le contexte :</strong> le jeu en ligne est aujourd’hui un espace social majeur. Toutefois, les échanges virtuels peuvent manquer de profondeur et d’empathie. Les comportements toxiques, dont le cyberharcèlement, sont documentés dans les communautés de joueurs (<a href="#source9">EPRS, 2023</a>).</p>
             <p><strong>Les risques concrets :</strong> un jeune peut ressentir de la solitude malgré de nombreuses interactions en ligne, ou s’isoler dans un cercle virtuel au détriment de ses relations physiques. L’exposition répétée à des comportements agressifs ou à de la triche peut fausser sa vision d’une compétition saine (<a href="#source10">Parlement européen, 2023</a>).</p>
@@ -67,7 +68,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
         </section>
 
-        <section class="section card">
+        <section class="card bg-base-100 shadow-xl p-6">
             <h2>Enjeu n°3 : apprendre à gagner… et à perdre</h2>
             <p><strong>Le contexte :</strong> le jeu vidéo est un catalyseur d’émotions intenses : joie, frustration, stress. Mal gérées, ces émotions peuvent conduire à des comportements excessifs comme le « ragequit » ou une baisse de l’estime de soi. Jusqu’à 12 % des adolescents présentent un risque de dépendance (<a href="#source4">OMS, 2024</a>).</p>
             <p><strong>Les risques concrets :</strong> au‑delà du « gaming disorder » reconnu par l’OMS, une mauvaise régulation émotionnelle peut détériorer l’ambiance de jeu, créer des conflits familiaux et augmenter l’anxiété.</p>
@@ -80,7 +81,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
         </section>
 
-       <section class="section sources card" id="sources">
+       <section class="card bg-base-100 shadow-xl p-6 border-l-4 border-[var(--clr-accent)]" id="sources">
   <h2>Pour aller plus loin : sources principales</h2>
   <ol>
     <li id="source1">
