--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
     <meta charset="UTF-8">
     <!-- Google Tag Manager -->
@@ -31,6 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "areaServed": "Belgique"
     }
     </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -40,20 +41,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-  <section class="section hero">
-  <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
+  <section class="hero bg-base-200 text-center rounded-xl p-8">
+  <img src="assets/images/Ludus-Mentis-transparent.png" alt="Logo Ludus Mentis" class="mx-auto mb-4 max-w-[120px]" />
  <h1>Et si le jeu vidéo aidait votre enfant à grandir ?</h1>
 <p>Chez Ludus Mentis, nous transformons la passion du jeu vidéo en un puissant outil de développement personnel. Grâce à notre approche pédagogique unique, votre enfant apprend la communication, la gestion des émotions et l'esprit d’équipe. Pour s'épanouir à l'écran, comme dans la vie de tous les jours.</p>
 </section>
-  <section class="section card" id="concept">
+  <section class="card bg-base-100 shadow-xl p-6" id="concept">
       <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
       <p>Notre programme est conçu pour développer les compétences les plus recherchées aujourd’hui&nbsp;: <strong>collaboration, communication, créativité, et résolution de problèmes</strong>.</p>
       <p>Grâce à des ateliers concrets, des jeux coopératifs et des moments d’échange en groupe, nous travaillons toutes ces aptitudes essentielles pour leur avenir.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Les bénéfices pour votre enfant</h2>
       <ul>
         <li><strong>Communication&nbsp;:</strong> Exprimer ses idées clairement et écouter les autres.</li>
@@ -63,7 +64,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
  
-      <section class="section card">
+      <section class="card bg-base-100 shadow-xl p-6">
       <h2>Pourquoi un accompagnement est-il essentiel&nbsp;?</h2>
         <p>Si le jeu vidéo est une passion pour des millions de jeunes, une pratique non encadrée présente des risques. les chiffres parlent d'eux-mêmes&nbsp;:</p>
       <ul>
@@ -74,28 +75,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <strong>12&nbsp;% des jeunes sont considérés à risque de développer une pratique problématique</strong> (gaming disorder) selon l'OMS.
         </li>
       </ul>
-      <p style="margin-top: 1.5em;">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
-      <p style="text-align:center; margin-top:2em;"><a href="enjeux.html" class="btn">Voir les chiffres &amp; sources détaillés</a></p>
+      <p class="mt-6">Notre mission est de transformer ce temps d'écran en une expérience constructive.</p>
+      <p class="mt-8 text-center"><a href="enjeux.html" class="btn btn-primary">Voir les chiffres &amp; sources détaillés</a></p>
     </section>
 
 
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Un projet soutenu localement</h2>
       <p>Ludus Mentis est une initiative locale soutenue par la <strong>commune de walhain</strong> et la <strong>fédération belge d’esport</strong>, portée par des acteurs engagés dans l’éducation, la prévention et l’innovation pédagogique.</p>
       
-      <div style="display: flex; align-items: center; justify-content: center; gap: 2rem; margin-top: 1.5rem; flex-wrap: wrap;">
+      <div class="flex items-center justify-center gap-8 flex-wrap mt-6">
         <a href="https://www.walhain.be/" target="_blank" rel="noopener">
-          <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" style="max-height: 70px; object-fit: contain;">
+          <img src="assets/images/logo_walhain.png" alt="Logo de la commune de Walhain" class="h-16 object-contain">
         </a>
         <a href="https://besf.be/" target="_blank" rel="noopener">
-          <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" style="max-height: 70px; object-fit: contain;">
+          <img src="assets/images/logo_besf.png" alt="Logo de la Fédération Belge d'Esport" class="h-16 object-contain">
         </a>
       </div>
-      <p style="text-align:center; margin-top:2em;"><a href="academie.html" class="btn">Découvrir notre académie</a></p>
+      <p class="mt-8 text-center"><a href="academie.html" class="btn btn-primary">Découvrir notre académie</a></p>
     </section>
 
-      <section class="section card" style="text-align:center;">
+      <section class="card bg-base-100 shadow-xl p-6 text-center">
   <h2>Des questions ? parlons-en !</h2>
   <p><a href="faq.html">consultez notre faq</a> ou <a href="contact.html">contactez-nous directement</a>.<br>
     nous répondons à toutes vos préoccupations de parent.</p>
