--- a/infos-tarifs.html
+++ b/infos-tarifs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="retro">
 <head>
   <meta charset="UTF-8">
   <!-- Google Tag Manager -->
@@ -13,6 +13,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <title>Infos & Tarifs de l'Académie de Jeux Vidéo | Ludus Mentis</title>
   <meta name="description" content="Consultez les informations pratiques de nos modules de 7 semaines pour jeunes de 10 à 15 ans. Tarif, structure des ateliers et inscription à Walhain.">
   <meta name="keywords" content="tarif stage jeu vidéo, prix académie esport, inscription, informations pratiques, module 7 semaines">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css">
   <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="icon" type="image/png" href="assets/images/Ludus-Mentis-transparent.png">
 </head>
@@ -22,14 +23,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
   <div id="header"></div>
-  <main class="container">
+  <main class="container mx-auto p-4 space-y-8">
 
-    <section class="section hero">
+    <section class="hero bg-base-200 text-center rounded-xl p-8">
       <h1>Académie : Informations et Tarifs</h1>
       <p>Découvrez notre programme de modules thématiques conçus pour transformer la pratique du jeu vidéo en une véritable compétence de vie. Pour toute autre question, <a href="contact.html">n'hésitez pas à nous contacter</a>.</p>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Structure de nos modules</h2>
       <ul>
         <li><strong>Format :</strong> Chaque module est un cycle complet de <strong>7 semaines</strong>.</li>
@@ -39,7 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
     </section>
 
-    <section class="section card">
+    <section class="card bg-base-100 shadow-xl p-6">
       <h2>Un module, un objectif</h2>
       <p>Notre programme est découpé en modules thématiques. Chaque module de 7 semaines est une aventure en soi, centrée sur le développement d'une compétence spécifique à travers le jeu.</p>
       
@@ -53,11 +54,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>Cette approche permet à votre enfant non seulement de s'améliorer, mais aussi de découvrir une grande variété de jeux, chacun servant d'outil pour un apprentissage ciblé.</p>
     </section>
 
-    <section class="section card" style="text-align:center;">
+    <section class="card bg-base-100 shadow-xl p-6 text-center">
         <h2>Tarif et Inscription</h2>
-        <p style="font-size: 1.5em; font-weight: 600; color: var(--clr-accent-dark); margin-bottom: 0.5em;">230 € par module</p>
+        <p class="text-2xl font-semibold text-[var(--clr-accent-dark)] mb-2">230 € par module</p>
         <p>Ce tarif unique comprend les 7 ateliers de 2 heures, l'encadrement, l'accès à tout le matériel et l'assurance.</p>
-        <a href="contact.html" class="btn" style="margin-top: 1.5em;">Demander les dates du prochain module</a>
+        <a href="contact.html" class="btn btn-primary mt-6">Demander les dates du prochain module</a>
     </section>
 
   </main>
